[package]
name = "bandcamp-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
humantime = "2.1.0"
reqwest = "0.12"
rss = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
actix-rt = "2"
mime = "0.3"
